--- a/Para.Api/Para.Bussiness/Para.Bussiness.csproj
+++ b/Para.Api/Para.Bussiness/Para.Bussiness.csproj
@@ -14,6 +14,7 @@
 
 
     <ItemGroup>
+        <PackageReference Include="MailKit" Version="4.7.1.1" />
         <PackageReference Include="MediatR" Version="9.0.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.2" />
@@ -21,6 +22,8 @@
 
         <PackageReference Include="Hangfire" Version="1.8.14" />
         <PackageReference Include="Hangfire.SqlServer" Version="1.8.14" />
+        <PackageReference Include="MimeKit" Version="4.7.1" />
+        <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     </ItemGroup>
     
 </Project>
