--- a/Para.Api/Para.Api/appsettings.json
+++ b/Para.Api/Para.Api/appsettings.json
@@ -11,18 +11,18 @@
     "PostgresSqlConnection": "User ID=postgres;Password=Lucy89-21Cgy;Server=localhost;Port=5432;Database=padb;Integrated Security=true;Pooling=true;",
     "HangfireConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PaparaHangFire;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;Min Pool Size=0;Max Pool Size=100;Pooling=true;"
   },
-  "RabbitMQ": {
-    "HostName": "sparrow.rmq.cloudamqp.com",
-    "UserName": "ibkhaxlg",
-    "Password": "rxXNdaHJUAM9T100RWtNawx22dFdhPPY",
-    "VirtualHost": "ibkhaxlg",
+  "RabbitMQ": { 
+    "HostName": "********",
+    "UserName": "********",
+    "Password": "********",
+    "VirtualHost": "********",
     "Port": 5672
   },
   "Smtp": {
     "Server": "smtp.gmail.com",
     "Port": 587,
-    "User": "mrkayahan66@gmail.com",
-    "Password": "fglr utxc ilnk jtvk"
+    "User": "********",
+    "Password": "********"
 
   },
   "Redis": {
